<?xml version="1.0"?>
<package format="2">
  <name>raccoon_demo</name>
  <version>0.0.0</version>
  <description>The raccoon_demo package</description>

  <maintainer email="giovannididio.bruno@gmail.com">G. Bruno</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/raccoon_demo</url> -->

  <author email="giovannididio.bruno@gmail.com">G. Bruno</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>moebiustech_stm32_ros</build_depend>
  <build_export_depend>moebiustech_stm32_ros</build_export_depend>
  <exec_depend>moebiustech_stm32_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
