<?xml version="1.0"?>
<package format="2">
  <name>raccoon_description</name>
  <version>1.0.0</version>
  <description>The raccoon_description package</description>

  <maintainer email="giovannididio.bruno@gmail.com">G. Bruno</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/raccoon_description</url> -->

  <author email="giovannididio.bruno@gmail.com">G. Bruno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
