<?xml version="1.0"?>
<package format="2">
  <name>raccoon_navigation</name>
  <version>1.0.0</version>
  <description>The raccoon_navigation package</description>

  <maintainer email="giovannididio.bruno@gmail.com">G. Bruno</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/raccoon_navigation</url> -->

  <author email="giovannididio.bruno@gmail.com">G. Bruno</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>navigation</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
